# PostgreSQL_Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
PostgreSQL13/include/: ecpg_config.h  pg_config.h  pg_config_os.h
PostgreSQL13/include/libxml/: xmlversion.h
PostgreSQL13/include/server/catalog/: pg_aggregate_d.h  pg_am_d.h  pg_amop_d.h  pg_amproc_d.h  pg_attrdef_d.h  pg_attribute_d.h  pg_auth_members_d.h  pg_authid_d.h  pg_cast_d.h  pg_class_d.h  pg_collation_d.h  pg_constraint_d.h  pg_conversion_d.h  pg_database_d.h  pg_db_role_setting_d.h  pg_default_acl_d.h  pg_depend_d.h  pg_description_d.h  pg_enum_d.h  pg_event_trigger_d.h  pg_extension_d.h  pg_foreign_data_wrapper_d.h  pg_foreign_server_d.h  pg_foreign_table_d.h  pg_index_d.h  pg_inherits_d.h  pg_init_privs_d.h  pg_language_d.h  pg_largeobject_d.h  pg_largeobject_metadata_d.h  pg_namespace_d.h  pg_opclass_d.h  pg_operator_d.h  pg_opfamily_d.h  pg_partitioned_table_d.h  pg_policy_d.h  pg_proc_d.h  pg_publication_d.h  pg_publication_rel_d.h  pg_range_d.h  (+23 more)
PostgreSQL13/include/server/storage/: lwlocknames.h
PostgreSQL13/include/server/utils/: errcodes.h  fmgroids.h  fmgrprotos.h
PostgreSQL13/lib/: libpgcommon.lib  libpgport.lib  postgres.lib
PostgreSQL14/: README.md
PostgreSQL14/additional_libraries/: README.md
PostgreSQL14/include/server/: pg_config.h
PostgreSQL14/include/server/parser/: gram.h
PostgreSQL14/lib/: libpgcommon.lib  libpgport.lib  libxml2.lib  libxslt.lib  postgres.lib  zlib.lib
